# ai-research-mcp

./: .gitignore  pyproject.toml
src/ai_research_mcp/: __init__.py  config.py  db.py  server.py
src/ai_research_mcp/tools/: notes.py
tests/: smoke_test_db.py
