[project]
name = "ai-research-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abhirama Karthikeya", email = "abhiramakarthikeya@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
ai-research-mcp = "ai_research_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []
